[gd_scene load_steps=17 format=3 uid="uid://c6rfapywg2en6"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_881vj"]
[ext_resource type="Shader" path="res://scenes/pause_menu.gdshader" id="2_at7bn"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hofmb"]
shader = ExtResource("2_at7bn")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7powd"]
bg_color = Color(0.806571, 0.45889, 0.735194, 1)
skew = Vector2(1, 0)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tnhtc"]
bg_color = Color(0.305882, 0.439216, 0.843137, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(3, 0)

[sub_resource type="Theme" id="Theme_j4tj5"]
Button/styles/hover = SubResource("StyleBoxFlat_7powd")
Button/styles/normal = SubResource("StyleBoxFlat_tnhtc")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5qoev"]
bg_color = Color(0.807843, 0.458824, 0.733333, 1)
skew = Vector2(1, 0)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_knima"]
bg_color = Color(0.305882, 0.439216, 0.843137, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_4cl5l"]
Button/styles/hover = SubResource("StyleBoxFlat_5qoev")
Button/styles/normal = SubResource("StyleBoxFlat_knima")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eolvs"]
bg_color = Color(0.807843, 0.458824, 0.733333, 1)
skew = Vector2(1, 0)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qkjpj"]
bg_color = Color(0.305882, 0.439216, 0.843137, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_ya41l"]
Button/styles/hover = SubResource("StyleBoxFlat_eolvs")
Button/styles/normal = SubResource("StyleBoxFlat_qkjpj")

[sub_resource type="Animation" id="Animation_37ps0"]
length = 0.001

[sub_resource type="Animation" id="Animation_xlhh4"]
resource_name = "pause_blur"
length = 0.3

[sub_resource type="Animation" id="Animation_vftn2"]
resource_name = "pause_blur2"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ga8f6"]
_data = {
"RESET": SubResource("Animation_37ps0"),
"pause_blur": SubResource("Animation_xlhh4"),
"pause_blur2": SubResource("Animation_vftn2")
}

[node name="pause_menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
size_flags_vertical = 4
script = ExtResource("1_881vj")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
z_index = -20
material = SubResource("ShaderMaterial_hofmb")
layout_mode = 0
offset_right = 1276.0
offset_bottom = 722.0

[node name="PanelContainer" type="PanelContainer" parent="."]
process_mode = 3
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 3.0
offset_right = 1297.0
offset_bottom = 730.0
grow_horizontal = 2
grow_vertical = 2

[node name="pause_menu_container" type="VBoxContainer" parent="PanelContainer"]
visibility_layer = 524288
z_index = 6
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="resume_button" type="Button" parent="PanelContainer/pause_menu_container"]
z_index = -3
texture_filter = 1
layout_mode = 2
theme = SubResource("Theme_j4tj5")
text = "Resume"

[node name="restart_button" type="Button" parent="PanelContainer/pause_menu_container"]
z_index = -3
texture_filter = 1
layout_mode = 2
theme = SubResource("Theme_4cl5l")
text = "Restart"

[node name="pause_quit_button" type="Button" parent="PanelContainer/pause_menu_container"]
z_index = -3
texture_filter = 1
layout_mode = 2
theme = SubResource("Theme_ya41l")
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ga8f6")
}

[connection signal="pressed" from="PanelContainer/pause_menu_container/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PanelContainer/pause_menu_container/restart_button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="PanelContainer/pause_menu_container/pause_quit_button" to="." method="_on_pause_quit_button_pressed"]
